# wifind

./: .gitignore  README.md
Logger/: README.txt
Logger/main/: main.c
Simulator/: device_simulator.py
data-store/: .gitignore
data-store/api/: Cargo.toml  Dockerfile  start_as_docker
data-store/api/src/: main.rs
data-store/api/src/consul/: mod.rs  sd.rs
data-store/api/src/db/: database.rs
data-store/api/src/rabbit/: mod.rs  rabbitmq.rs
data_store/api/: Cargo.toml
data_store/api/src/: main.rs
data_store/api/src/db/: database.rs
deployment/: .gitignore
deployment/app/: app.hcl  deploy.tf
deployment/data-store/: .deploy.tf.un~  datastore.hcl  deploy.tf
deployment/fabio/: deploy.tf  fabio.hcl
deployment/gateway/: .deploy.tf.un~  deploy.tf  gateway.hcl
deployment/intervals/: deploy.tf  intervals.hcl
deployment/rabbit/: deploy.tf  rabbit.hcl
deployment/sensorlocation/: deploy.tf  sensorlocation.hcl
deployment/zones/: deploy.tf  zones.hcl
development-environment/: Vagrantfile  server.hcl
event-logger/: eventLogger.py
frontend/: Dockerfile  package-lock.json  package.json  tslint.json
frontend/src/: index.html
gateway/: .gitignore  Dockerfile  gruntfile.js  package-lock.json  package.json
gateway/src/: server.ts
interval/: Dockerfile  intervals.hcl  main.go  real-time-counter.go
sensor-zone/: .dockerignore  Dockerfile  commands.rtf  gruntfile.js  package-lock.json  package.json
sensor-zone/src/: database.ts  model-impl.ts  server.ts
serial-transciever/: README.md  README.txt  serial-transciever.py
zones/: main.go
(+78 files in other folders)
