[package]
name = "api"
version = "0.1.0"
authors = ["Jonas Hedman Engström <jonas.hedeng@gmail.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.3"
rocket_codegen = "0.3"
influx_db_client = "0.3.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[patch.crates-io]
influx_db_client = { git = 'https://github.com/driftluo/InfluxDBClient-rs' }

