[package]
name = "api"
version = "0.1.0"
authors = ["Jonas Hedman Engström <jonas.hedeng@gmail.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.3"
rocket_codegen = "0.3"
influx_db_client = "0.3.0"
consul = "0.2.0"
log = "0.3.8"
lapin-futures = "0.10.0"
futures = "0.1.17"
tokio-core = "0.1.10"
env_logger = "0.4.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

[patch.crates-io]
influx_db_client = { git = 'https://github.com/driftluo/InfluxDBClient-rs' }

