[package]
name = "api"
version = "0.1.0"
authors = ["Jonas Hedman Engström <jonas.hedeng@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bson = "0.10.0"
mongodb = "0.3.7"
rocket = "0.3"
rocket_codegen = "0.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
